# dearly-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
dearly_ai/: __init__.py  _hello_world.py  _openai_client.py  prompt
dearly_ai/server/: server.py
dearly_ai/server/public/: index.html
examples/: basic_chat.py  basic_server.py  hello_world.py
tests/: openai_client_tests.py  tests.py
